# no-code

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: build.yaml  lint.yaml  test.yaml
purelib/: no.pth
src/no_code/: __init__.py  __main__.py  no.py
tests/: test_no_code.py
tests/code/: embedded_d.py  embedded_e.py  encoded.py
