[project]
name = "no-code"
version = "0.0.2"
description = "The best way to write code is to write no code at all."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
authors = [{ name = "Lemonyte", email = "contact@lemonyte.com" }]
keywords = ["no code", "invisible", "encoding", "joke"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/lemonyte/no-code"

[project.scripts]
no_code = "no_code.__main__:no_code_cmd"
yes_code = "no_code.__main__:yes_code_cmd"

[dependency-groups]
dev = [
    "prek~=0.4.5",
    "pytest-cov~=7.1.0",
    "pytest~=9.1.0",
    "ty~=0.0.49",
]

[build-system]
requires = ["uv_build>=0.11.5,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
data = { purelib = "purelib" }

[tool.ruff]
src = ["src"]
exclude = ["tests/code/**"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D", "T"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "S603"]

[tool.ty.src]
exclude = ["tests/code/**"]
